# Qt-GUI-for-Biosim-Windows

./: AgentGraphicsView.cpp  AgentGraphicsView.h  CMakeCache.txt  CMakeLists.txt  DoubleClickableGraphicsView.h  NewWindowGraphicsView.h  README.md  SimulationGraphicsView.cpp  SimulationGraphicsView.h  application.ini  assets.qrc  biosimparser.cpp  biosimparser.h  biosimrunner.cpp  biosimrunner.h  biosimwidget.cpp  biosimwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paramControllers.cpp
bak/: biosim4.ini
biosim4/: CImg.h  analysis.cpp  endOfGeneration.cpp  endOfSimStep.cpp  executeActions.cpp  getSensor.cpp  imageWriter.cpp  imageWriter.h  indiv.cpp  indiv.h  main.cpp  params.cpp  params.h  peeps.h  signals.cpp  simulator.cpp  simulator.h  spawnNewGeneration.cpp
tools/: diversity-plot.gp  graph-nnet.py  net.txt
